--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,6 @@
 # Email spool folder
 /app/spool/*
 
-# Cache, session files and logs (Symfony3)
-/var/cache/*
-/var/logs/*
-/var/sessions/*
-!var/cache/.gitkeep
-!var/logs/.gitkeep
-!var/sessions/.gitkeep
-
 # Parameters
 /app/config/parameters.yml
 /app/config/parameters.ini
@@ -25,6 +17,9 @@
 /bin/*
 !bin/console
 !bin/symfony_requirements
+
+/vendor/
+/bin/
 
 # Assets and user uploads
 /web/bundles/
