push del proyecto con solo login

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -61,7 +61,9 @@ doctrine:
 # Swiftmailer Configuration
 swiftmailer:
     transport: '%mailer_transport%'
+    #username: '%mailer_user%'
+    #password: '%mailer_password%'
     host: '%mailer_host%'
-    username: '%mailer_user%'
-    password: '%mailer_password%'
+    port:       25
+    #encryption: "tls"
     spool: { type: memory }
