--- a/src/BooksBundle/Resources/config/services.yml
+++ b/src/BooksBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-#    books.example:
+#    teamup.example:
 #        class: BooksBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
